syntax = "proto3";
import "google/protobuf/timestamp.proto";
package gandelm.version.v1;

service VersionService {
  rpc List(ListRequest) returns (ListResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message ListRequest {}
message ListResponse { repeated Version versions = 1; }

message GetRequest { string version_id = 1; }
message GetResponse { Version version = 1; }

message CreateRequest {
  string id = 1;
  uint32 base_priority = 2;
  repeated BaseArtifact base_artifacts = 3;
}

message CreateResponse { Version version = 1; }

message UpdateRequest { Version version = 1; }

message UpdateResponse { Version version = 1; }

message DeleteRequest { string version_id = 1; }

message DeleteResponse {}

message Version {
  string id = 1;
  uint32 base_priority = 2;
  repeated BaseArtifact base_artifacts = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message BaseArtifact {
  string artifact_id = 1;
  string tag = 2;
}
